@@ -37,7 +37,7 @@ class OrderRepositoryR2dbcTests {
 	}
 
 	private static String r2dbcUrl() {
-		return String.format("r2dbc:postgresql://%s:%s/%s", postgresql.getHost(),
+		return "r2dbc:postgresql://%s:%s/%s".formatted(postgresql.getHost(),
 				postgresql.getMappedPort(PostgreSQLContainer.POSTGRESQL_PORT), postgresql.getDatabaseName());
 	}
 
